--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <title>Weather</title>
 </head>
 
 <body>
 
     <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
+        <h1 class="location-timezone"></h1>
         <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
         <div class="degree-section">
-            <h2 class="temperature-degree">34</h2>
-            <span>°F</span>
+            <h2 class="temperature-degree"></h2>
+            <span>°C</span>
         </div>
-        <div class="temperature-description">Its friggin cold</div>
+        <div class="temperature-description"></div>
     </div>
 
     <script src="skycons.js"></script>
