--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <div class="temperature-description"></div>
     </div>
 
+    <form id="form">
+        <input
+            type="text"
+            id="search"
+            placeholder="Search by location"
+            autocomplete="off"
+        />
+    </form>
+    <main id="main"></main>
+
     <script src="app.js"></script>
 </body>
 
